# olami-android-client-sdk

./: .gitignore  README.md  build.gradle  settings.gradle
examples/: README.md  build.gradle
examples/src/main/: AndroidManifest.xml
examples/src/main/java/ai/olami/android/example/: Config.java  MainActivity.java  SpeechInputActivity.java  TextInputNLIAnalysisActivity.java  TextInputWordSegmentationActivity.java
examples/src/main/java/ai/olami/android/sample/: MainActivity.java  RecognizerConfiguration.java  SpeechInputActivity.java  TextInputNLIAnalysisActivity.java  TextInputWordSegmentationActivity.java
examples/src/main/res/layout/: activity_main.xml  activity_speech_input.xml  activity_text_input_nli_analysis.xml  activity_text_input_word_segmentation.xml  configuration_setting.xml
examples/src/main/res/menu/: menu.xml
examples/src/main/res/values/: strings.xml  styles.xml
examples/src/main/res/values-en/: strings.xml
examples/src/main/res/values-zh-rTW/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
lib/: CMakeLists.txt  build.gradle
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: native-lib.cpp
lib/src/main/cpp/speex/: CMakeLists.txt  speex_jni.cpp
lib/src/main/java/ai/olami/android/: AudioRecordManager.java  IKeepRecordingSpeechRecognizerListener.java  IRecorderSpeechRecognizerListener.java  KeepRecordingSpeechRecognizer.java  RecorderSpeechRecognizer.java  SpeechRecognizerBase.java  VoiceVolume.java
lib/src/main/java/ai/olami/android/jni/: Codec.java
